# MiniWord-4th-Semester

./: .gitignore  LICENSE  README.md  discussion_log.json  discussion_log.md  file_process.cpp  file_process.h  general_design.md  memory_new  screen.h  screen_cache.cpp  stl_implement_text_class.cpp  stl_implement_text_class.h  stl_implement_text_classt.h  testmain.cpp  text.txt
0825-0823-0806/: report.doc
0825-0823-0806/document/: 任务描述.md  总体方案设计说明.md  模块设计说明.md  测试报告.md  用户使用说明.md  评价和改进意见.md  需求分析.md
0825-0823-0806/source_code/: file_process.h  main.cpp  mainwindow.cpp  memory_new.cpp  memory_new.h  screen.h
MiniWord/MiniWord/: main.cpp
MiniWord/MiniWord.xcodeproj/: project.pbxproj
build-gui-Desktop_Qt_5_9_3_clang_64bit-Debug/: Makefile  ui_dialog.h
build-gui_new-Desktop_Qt_5_9_3_clang_64bit-Debug/: Makefile  moc_file_process.cpp  moc_mainwindow.cpp
build-gui_new_with_input_method-Desktop_Qt_5_9_3_clang_64bit-Debug/: Makefile  moc_file_process.cpp  moc_mainwindow.cpp
gui/: dialog.cpp  dialog.h  dialog.ui  file_process.cpp  gui.pro  inputdialog.cpp  inputdialog.h  mainwindow.cpp  mainwindow.h  screen_cache.cpp  screen_cache.h  stl_implement_text_class.cpp  stl_implement_text_class.h
gui_new/: const_define.h  file_process.cpp  file_process.h  gui_new.pro  main.cpp  mainwindow.cpp  mainwindow.h  memory_new.cpp  memory_new.h  screen.cpp  screen.h
gui_with_input_method/: CMakeLists.txt  const_define.h  gui_new_with_input_method.pro  mainwindow.cpp  mainwindow.h  memory_new.cpp  memory_new.h  screen.cpp  screen.h
(+11 files in other folders)
